# udp-server-client

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp  resources.json  udp_server.cpp  udp_server.h
